2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/compiler-public.hxx,
 include/pqxx/robusttransaction.hxx, include/pqxx/subtransaction.hxx,
 include/pqxx/transaction.hxx, src/connection_base.cxx, src/largeobject.cxx,
 src/notification.cxx, src/pipeline.cxx, src/tablereader.cxx,
 src/tablewriter.cxx, src/transaction_base.cxx:
 - Remove PQXX_QUIET_DESTRUCTORS.  Surely that Visual C++ 2003 bug's been fixed.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Make default inline symbol visibility of "hidden" work again.
 - Also make non-inline symbols hidden by default.
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - Replace PQAlloc member with a reference to PQAlloc.
 - Less efficient, but conflicted with "hidden" inline visibility.
 - Becomes easier once we can require shared_ptr.
2015-01-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Add --with-postgres-include and --with-postgres-lib options.
 - Start using AS_IF() instead of plain shell "if".
 - Start using $() instead of ``.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/binarystring.hxx,
 include/pqxx/compiler-public.hxx, include/pqxx/config.h.in,
 include/pqxx/cursor.hxx, include/pqxx/except.hxx,
 include/pqxx/largeobject.hxx, include/pqxx/pipeline.hxx,
 include/pqxx/result.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/row.hxx, include/pqxx/strconv.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablewriter.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/except.cxx,
 test/test_main.hxx:
 - Support C++11 [[noreturn]] attribute.
 - Support C++14 [[deprecated]] attribute.
 - Move function attributes to front of declaration.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Remove half-baked optimization when converting non-number floats to strings.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint: