@@ -8,17 +8,6 @@ set -e
 # bugs) involved in localization, encoding issues etc.  We only do ASCII here.
 #export LC_ALL=C
 
-latest_automake() {
-	for v in "-1.11" "-1.10" "-1.9" "-1.8" "-1.7" "-1.6" "" ; do
-		if which "automake$v" >/dev/null ; then
-			echo "$v"
-			return
-		fi
-	done
-}
-
-ver="`latest_automake`"
-
 # The VERSION file defines our versioning
 PQXXVERSION=`./tools/extract_version`
 echo "libpqxx version $PQXXVERSION"
@@ -63,8 +52,8 @@ fi
 autoheader
 
 libtoolize --force --automake --copy
-aclocal${ver} -I . -I config/m4
-automake${ver} --verbose --add-missing --copy
+aclocal -I . -I config/m4
+automake --verbose --add-missing --copy
 autoconf
 
 conf_flags="--enable-maintainer-mode $CONFIG_ARGS"
