@@ -8,7 +8,7 @@ EXTRA_DIST = \
 	template2mak.py \
 	pqxxthreadsafety.cxx
 
-INCLUDES=-I$(top_builddir)/include -I$(top_srcdir)/include ${POSTGRES_INCLUDE}
+AM_CPPFLAGS=-I$(top_builddir)/include -I$(top_srcdir)/include ${POSTGRES_INCLUDE}
 # Override automatically generated list of default includes.  It contains only
 # unnecessary entries, and incorrectly mentions include/pqxx directly.
 DEFAULT_INCLUDES=
